Modificado login con consumo REST

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,8 @@
     <string name="error_invalid_email">El correo ingresado no es válido</string>
     <string name="error_invalid_password">La contraseña ingresada es muy corta</string>
     <string name="error_incorrect_password">La contraseña es incorrecta</string>
-    <string name="error_field_required">Este campo es requerido</string>
+    <string name="error_incorrect_email_or_password">Correo o contraseña incorrecta</string>
+    <string name="error_field_required">Requerido*</string>
     <string name="permission_rationale">"Se necesitan permisos de contactos."
     </string>
 
