--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,19 +10,17 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_login">Iniciar Sesión</string>
+
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">El correo ingresado no es válido</string>
-    <string name="error_invalid_password">La contraseña ingresada es muy corta</string>
+    <string name="error_invalid_password">Su contraseña debe ser de 6 a 10 dígitos</string>
     <string name="error_incorrect_password">La contraseña es incorrecta</string>
-    <string name="error_incorrect_email_or_password">Correo o contraseña incorrecta</string>
-    <string name="error_field_required">Requerido*</string>
-    <string name="permission_rationale">"Se necesitan permisos de contactos."
-    </string>
-
+    <string name="error_incorrect_email_or_password">Correo y/o contraseña inválidos</string>
+    <string name="error_field_required">El campo es requerido</string>
     <string name="login_recuperar_contrasena"><u>¿Olvidaste tu contraseña?</u></string>
     <string name="login_crear_cuenta"><u>¿No tienes cuenta?</u></string>
 </resources>
